fix navbar gap

--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -1,62 +1,3 @@
-@import "headernav.css";
-@import "searchbar.css";
-@import "usellocation.css";
-@import "weatherbox.css";
-@import "forecast.css";
-@import "highlightsbox.css";
-@import 'responsive.css';
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap");
-
-:root {
-  --primary: #b5a1e5;
-  --on-primary: #100e17;
-  --background: #131214;
-  --on-background: #eae6f2;
-  --surface: #232125;
-  --on-surface: #dddae5;
-  --on-surface-variant: #7b7980;
-  --on-surface-variant-2: #b9b6bf;
-}
-
-* {
-  font-family: "Poppins", sans-serif;
-  box-sizing: border-box;
-  margin: 0;
-}
-
-.navbar {
-  display: flex;
-  background-color: var(--background);
-  align-items: center;
-  justify-content: space-around;
-  padding: 2rem 4rem 1.5rem 2rem;
-}
-
-main {
-  background-color: var(--background);
-  min-height: 100vh;
-  margin: 0;
-}
-
-main .container {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  padding: 3rem;
-  gap: 3rem;
-}
-
-main .container .row1 {
-  display: flex;
-  flex-direction: column;
-  gap: 1.4rem;
-}
-
-main .container .row2 {
-  display: flex;
-  flex-direction: column;
-}
-
 /* Media  */
 
 /* Laptop */
@@ -321,7 +262,7 @@ main .container .row2 {
   }
 }
 
-@media (max-width: 550px) {
+@media (max-width: 450px) {
   html {
     font-size: 65%;
   }
@@ -330,17 +271,13 @@ main .container .row2 {
     justify-content: space-between;
   }
 
-  .navbar .header-nav .header-inside p{
-    display: none;
-  }
-
   search-bar .searchContainer {
     padding-left: 1.2rem;
     padding-right: 1rem;
   }
 
   search-bar .searchContainer input {
-    width: 220px;
+    width: 110px;
   }
 
   use-location button {
@@ -437,6 +374,6 @@ main .container .row2 {
   }
 
   search-bar .searchContainer input {
-    width: 200px;
+    width: 100px;
   }
 }
